argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
spec:
  selector:
    matchLabels:
      app: arane-dash
  template:
    metadata:
      labels:
        app: arane-dash
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
          image: registry.uniproject.jp/hp-infra/nfs-dashboard:1.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: zip
              mountPath: /nextjs/public/files
      volumes:
        - name: zip
          persistentVolumeClaim:
            claimName: zip
      imagePullSecrets:
        - name: internal-harbor
---
apiVersion: v1
kind: Service
metadata:
  name: arane-dash
spec:
  ipFamilyPolicy: RequireDualStack
  selector:
    app: arane-dash
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
