argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
  annotations:
    cert-manager.io/cluster-issuer: le-cf-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: arane-dash.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ramura-site
                port:
                  number: 80
  tls:
    - hosts:
        - arane-dash.uniproject.jp
      secretName: arane-site-tls
